--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
     "ng2-data-table": "^1.1.0",
+    "ng2-file-required": "^1.0.10",
+    "ng2-owl-carousel": "^0.1.15",
     "rxjs": "^5.5.2",
+    "tinymce": "^4.7.4",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
